@@ -1,3 +1,9 @@
+UNRELEASED:
+- blabla
+- blublu
+- foo
+- bar
+
 v0.1.1:
 - FIX: Layout background rendering z-index
 - FIX: Attribute binding didn't work (e.g. :debug="var")
